# EncryptDcrypt

./: .gitignore  EncryptDcrypt  README.md  code_snippet.txt  decrypt.py  encrypt.py  generate_encrypt_files.py  key.py  key.txt  launcher.py  pyproject.toml  requirements.txt  setup.py  view_metrics.py
benchmarks/: benchmark_suite.py  requirements.txt  simple_benchmark.py  standalone_engine.py
docs/: README.md
examples/: basic_usage.py
src/encryptdecrypt/: __init__.py  __main__.py  config.yaml
src/encryptdecrypt/cli/: __init__.py  interface.py
src/encryptdecrypt/core/: __init__.py  engine.py
src/encryptdecrypt/gui/: __init__.py  interface.py
src/encryptdecrypt/utils/: __init__.py  file_utils.py  generate_key.py
tests/: quick_test.py  simple_gui_test.py  test_benchmark.py  test_encryption.py  test_gui.py
