[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "encryptdecrypt"
version = "2.0.0"
description = "Advanced File Encryption System"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "KleaSCM", email = "KleaSCM@gmail.com"}
]
maintainers = [
    {name = "KleaSCM", email = "KleaSCM@gmail.com"}
]
keywords = ["encryption", "cryptography", "security", "file", "gui", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "cryptography>=3.4.8",
    "customtkinter>=5.2.0",
    "rich>=12.0.0",
    "colorlog>=6.7.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/KleaSCM/encryptdecrypt"
Repository = "https://github.com/KleaSCM/encryptdecrypt"
Documentation = "https://github.com/KleaSCM/encryptdecrypt#readme"
"Bug Tracker" = "https://github.com/KleaSCM/encryptdecrypt/issues"

[project.scripts]
encryptdecrypt = "encryptdecrypt.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
encryptdecrypt = ["*.yaml", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
] 